# OOP_labs

./: Readme.md
Lab_1/: CMakeLists.txt  Readme.md
Lab_1/src/: function.cpp  main.cpp
Lab_1/test/: test.cpp
Lab_2/: CMakeLists.txt  Readme.md
Lab_2/include/: Hex.hpp
Lab_2/src/: Hexad.cpp  main.cpp
Lab_2/test/: hex_test.cpp
Lab_3/: CMakeLists.txt  Readme.md  main.cpp
Lab_3/include/: figure.hpp  rectangle.hpp  square.hpp  trapezoid.hpp
Lab_3/src/: figure.cpp  rectangle.cpp  square.cpp  trapezoid.cpp
Lab_3/test/: fig_test.cpp
Lab_4/: CMakeLists.txt
Lab_4/include/: Array.hpp  Figure.hpp  Point.hpp  rectangle.hpp  square.hpp  trapezoid.hpp
Lab_4/src/: main.cpp
Lab_4/test/: fig_test.cpp
Lab_5/: CMakeLists.txt  Readme.md  main.cpp
Lab_5/include/: MemoryResource.hpp  Stack.hpp
Lab_5/src/: MemoryResources.cpp  Stack.tpp
Lab_5/test/: test.cpp
Lab_6/: CMakeLists.txt  main.cpp  readme.md
Lab_6/include/: CombatVisitor.hpp  ConsoleLogger.hpp  Factory.hpp  FileLogger.hpp  NPC.hpp  Observer.hpp  SlaveTrader.hpp  Squirrel.hpp  Subject.hpp  Visitor.hpp  WanderingKnight.hpp
Lab_6/src/: CombatVisitor.cpp  ConsoleLogger.cpp  Factory.cpp  FileLogger.cpp  SlaveTrader.cpp  Squirrel.cpp  Subject.cpp  WanderingKnight.cpp
Lab_6/test/: test.cpp
Lab_7/: CMakeLists.txt  main.cpp
Lab_7/include/: factory.hpp  fight.hpp  knight.hpp  merchant.hpp  npc.hpp  observer.hpp  squirrel.hpp
Lab_7/src/: factory.cpp  fight.cpp  knight.cpp  merchant.cpp  npc.cpp  observer.cpp  squirrel.cpp
Lab_7/test/: test.cpp
